--- a/sass/home/_garden_time.scss
+++ b/sass/home/_garden_time.scss
@@ -23,6 +23,7 @@
         display: grid;
         grid-column-gap: 24px;
         grid-row-gap: 24px;
+        box-sizing: border-box;
 
         &-slot {
           position: relative;
